--- a/staticfiles/css/dashboard.css
+++ b/staticfiles/css/dashboard.css
@@ -1,6 +1,6 @@
 /* General Styles */
 #id_password1_helptext {
-    font-size: .675em;
+    font-size: 12px;
 }
 
 h1, h2, h3, h4, h5, h6 {
