--- a/staticfiles/css/portfolio.css
+++ b/staticfiles/css/portfolio.css
@@ -52,6 +52,16 @@
     padding-bottom: 0;
 }
 
+/* Portfolio Add button from prtofolio view page */
+.my-portfolio-title a{
+    margin-left: 15px;
+}
+
+/* Portfolio title */
+.portfolio-title {
+    margin: 15px;
+}
+
 /* Portfolio description */
 .portfolio-title p {
     margin: 5px 0 0 0;
@@ -101,7 +111,7 @@
     top: 0; /* Align to the top */
     right: 0; /* Align to the right */
     z-index: 1000; /* Ensures the button is on top of other elements */
-    height: 16; /* If you want it to be half the height of its container */
+    height: 16px;
 }
 
 .dropdown-menu {
@@ -149,7 +159,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    max-height: 65vh;
+    max-height: 53vh;
     padding: 15px;
     border: var(--border);
     background-color: var(--bg-light);
@@ -165,7 +175,6 @@
 .btn-sm,
 #edit-asset-name-btn,
 #asset-save-btn {
-    padding: auto;
     text-align: center;
     width: 32px;
     height: 32px;
@@ -175,11 +184,6 @@
 .custom-control.form-group {
     padding: 5px;
     margin: 0;
-}
-
-/* Form group element height */
-.form-group div {
-    min-height: 40px;
 }
 
 /* Switch control styling */
@@ -209,7 +213,7 @@
 
 /* Removes focus outline */
 .form-check-input:focus {
-    border-color: none;
+    border-color: transparent;
     box-shadow: none;
 }
 
@@ -234,6 +238,11 @@
 /* Moves the toggle button when checked */
 .custom-control.form-switch .form-check-input:checked:before {
     left: 27px;
+}
+
+/* Transaction form buttons */
+#transactionForm .btn{
+    margin-top: 0 !important;
 }
 
 /* Header section inside the portfolio */
